--- a/admin-auth/package.json
+++ b/admin-auth/package.json
@@ -17,12 +17,14 @@
   "author": "Tarek Monjur",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "multer": "^1.4.2",
     "popper.js": "^1.16.1",
     "pug": "^2.0.4",
     "react": "^16.13.1",
