--- a/admin-auth/.env
+++ b/admin-auth/.env
@@ -1,3 +1,6 @@
 APP_NAME =Simple Auth App
 PORT=8000
 HOST=http://localhost
+DB_NAME=admin_auth
+DB_URL=mongodb://localhost:27017
+SECRET=mytestapp!!
