--- a/ncms/package.json
+++ b/ncms/package.json
@@ -5,10 +5,11 @@
   "main": "app.js",
   "scripts": {
     "scss": "sass --watch public/scss/style.scss:public/dist/css/style.css",
-    "watch": "webpack --mode=development --watch",
+    "watch": "nodemon app.js",
+    "webpack-watch": "webpack --mode=development --watch",
     "build": "webpack --mode=development",
-    "start": "nodemon app.js",
-    "start:dev": "build && start",
+    "start": "npm-run-all --parallel build watch",
+    "start:dev": "npm-run-all --parallel webpack-watch watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tarekmonjur@gmail.com",
@@ -16,27 +17,40 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.4.1",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.9.14",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.16.1",
     "pug": "^2.0.4",
     "react": "^16.13.1",
+    "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "validator": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
