--- a/ncms/.babelrc
+++ b/ncms/.babelrc
@@ -1,10 +1,18 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "10"
+        }
+      }
+    ],
     "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-private-methods"
+    "@babel/plugin-proposal-private-methods",
+    "@babel/plugin-transform-async-to-generator"
   ]
 }
