--- a/ncms/.env
+++ b/ncms/.env
@@ -5,3 +5,4 @@ DB_NAME=ncsm
 DB_URL=mongodb://localhost:27017
 SECRET=mytestapp!!
 ENVIRONMENT=development
+MIGRATE_dbConnectionUri=mongodb://localhost:27017/ncsm
