--- a/ncms/package.json
+++ b/ncms/package.json
@@ -10,7 +10,9 @@
     "build": "webpack --mode=development",
     "start": "npm-run-all --parallel build watch",
     "start:dev": "npm-run-all --parallel webpack-watch watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "./node_modules/.bin/migrate",
+    "migrate-up": "./node_modules/.bin/migrate up --md ./src/migrations"
   },
   "author": "tarekmonjur@gmail.com",
   "license": "MIT",
@@ -26,6 +28,7 @@
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "migrate-mongoose": "^4.0.0",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
