--- a/ncms/.env
+++ b/ncms/.env
@@ -4,5 +4,5 @@ HOST=http://localhost
 DB_NAME=ncsm
 DB_URL=mongodb://localhost:27017
 SECRET=mytestapp!!
-ENVIRONMENT=development
+NODE_ENV=development
 MIGRATE_dbConnectionUri=mongodb://localhost:27017/ncsm
