major update - mqtt, report etc

--- a/ncms/.env
+++ b/ncms/.env
@@ -1,8 +1,8 @@
 APP_NAME=Nurse Call System
-PORT=3000
-HOST=http://localhost
-DB_NAME=ncsm
-DB_URL=mongodb://localhost:27017
-SECRET=mytestapp!!
 NODE_ENV=development
-MIGRATE_dbConnectionUri=mongodb://localhost:27017/ncsm
+EXPRESS_PORT=3000
+DB_URL=mongodb://root:root@mongo:27017/ncms?authSource=admin
+SECRET=mytestapp!!
+MIGRATE_dbConnectionUri=mongodb://root:root@mongo:27017/ncms?authSource=admin
+MQTT_HOST=localhost:1884
+IO_HOST=localhost:3000
