--- a/ncms/mosquitto/config/mosquitto.conf
+++ b/ncms/mosquitto/config/mosquitto.conf
@@ -1,4 +1,12 @@
+pid_file /var/run/mosquitto.pid
+
 persistence true
 persistence_location /mosquitto/data/
 log_dest file /mosquitto/log/mosquitto.log
 connection_messages true
+
+allow_anonymous false
+password_file /mosquitto/etc/passwd
+
+websockets_log_level 255
+per_listener_settings false
