--- a/ncms/package.json
+++ b/ncms/package.json
@@ -31,8 +31,11 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "migrate-mongoose": "^4.0.0",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
+    "mqtt": "^4.1.0",
+    "multiselect-react-dropdown": "^1.5.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -46,6 +49,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
