--- a/ncms-app/package.json
+++ b/ncms-app/package.json
@@ -11,21 +11,28 @@
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "assert": "^2.0.0",
+    "buffer": "^5.6.0",
+    "events": "^3.2.0",
     "expo": "~38.0.8",
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.2",
     "expo-updates": "~0.2.10",
     "lodash": "^4.17.20",
+    "path": "^0.12.7",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-push-notification": "^5.1.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.9.0",
     "react-native-unimodules": "~0.10.1",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "socket.io-client": "^2.3.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
