--- a/ncms-app/android/build.gradle
+++ b/ncms-app/android/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext {
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "+" // default: "+"
         buildToolsVersion = "29.0.2"
         minSdkVersion = 29
         compileSdkVersion = 29
