--- a/ncms-app/package.json
+++ b/ncms-app/package.json
@@ -23,6 +23,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-background-timer": "^2.4.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-push-notification": "^5.1.0",
     "react-native-reanimated": "^1.9.0",
