--- a/ncms/package.json
+++ b/ncms/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "mqtt": "^4.1.0",
+    "multer": "^1.4.2",
     "multiselect-react-dropdown": "^1.5.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
